include $(top_srcdir)/Common.mk
include $(top_srcdir)/services/docker_services.mk

COMPOSER_FILE = $(srcdir)/docker-composer_v1.yml
STORE_DIR     = $(abs_builddir)

export abs_srcdir \
       abs_builddir \
       STORE_DIR \
       REROUTE_IP \
       REROUTE_PORTS \
       DOCKER_IMAGE \
       COMPOSER_FILE 



start-local: 
stop-local:
