
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_pull", "container_push")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/EdSchouten/bazel-buildbarn
gazelle(
    name = "gazelle",
)


# bazel run :bbb_browser_push --python_top=@io_bazel_rules_docker//python:py_runtime_2
container_push(
    name = "bbb_browser_push", 
    image = "@buildbarn//cmd/bbb_browser:bbb_browser_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_browser_image", 
    tag = "latest",
)

container_push(
    name = "bbb_scheduler_push", 
    image = "@buildbarn//cmd/bbb_scheduler:bbb_scheduler_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_scheduler_image", 
    tag = "latest",
)

container_push(
    name = "bbb_frontend_push", 
    image = "@buildbarn//cmd/bbb_frontend:bbb_frontend_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_frontend_image", 
    tag = "latest",
)

container_push(
    name = "bbb_runner_push", 
    image = "@buildbarn//cmd/bbb_runner:bbb_runner_ubuntu16_04_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_runner_image", 
    tag = "latest",
)

container_push(
    name = "bbb_storage_push", 
    image = "@buildbarn//cmd/bbb_storage:bbb_storage_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_storage_image", 
    tag = "latest",
)

container_push(
    name = "bbb_worker_push", 
    image = "@buildbarn//cmd/bbb_worker:bbb_worker_container",
    format = "Docker", 
    registry = "localhost:5000", 
    repository = "consorziorfx/bbb_worker_image", 
    tag = "latest",
)

# this does not work ... bummer!
genrule(
    name = "bbb_containers_push",
    srcs = [
        ":bbb_browser_push" ,
        ":bbb_frontend_push" ,
        ":bbb_runner_push" ,
        ":bbb_scheduler_push" ,
        ":bbb_storage_push" ,
        ":bbb_worker_push"
        ],
    outs = ["log.txt"],
    cmd = "touch $@",
    executable = True,
)







